Bug 142196 - EDITING Image anchored to deleted character is not marked as deleted
Summary: EDITING Image anchored to deleted character is not marked as deleted
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks: Track-Changes
  Show dependency treegraph
 
Reported: 2021-05-10 13:51 UTC by NISZ LibreOffice Team
Modified: 2021-06-07 07:25 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer image anchored to deleted text (119.09 KB, application/vnd.oasis.opendocument.text)
2021-05-10 13:51 UTC, NISZ LibreOffice Team
Details
Screenshot of the problem in Writer (120.09 KB, image/png)
2021-05-10 13:51 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-05-10 13:51:28 UTC
Created attachment 171828 [details]
Example file from Writer image anchored to deleted text

Attached document contains an image that is anchored to character, inside a word that is deleted with change tracking.
The image is not marked with crossing out, despite it is considered deleted when the tracked changes are hidden or accepted, i.e. it disappears.

Steps to reproduce:
    1. Open attached document

Actual results:
The dog image is not marked as deleted.

Expected results:
The dog image should be crossed out.

LibreOffice details:
Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 1675a68526c43c6c6e4dc850ee911f0c1de75c88
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2021-05-10 13:51:50 UTC
Created attachment 171829 [details]
Screenshot of the problem in Writer
Comment 2 Harshita Nag 2021-05-10 14:59:05 UTC
CONFIRMED on Ubuntu 18.04 LTS and LibreOffice 7.2.0.0.alpha0+

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 27911b0455d8dcc08a0702372492a6ce00250cb7
CPU threads: 8; OS: Linux 5.3; UI render: default; VCL: gtk3
Locale: en-IN (en_IN); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2021-04-12_15:34:11
Calc: threaded
Comment 3 Commit Notification 2021-05-12 06:44:37 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1610eeef6f2312616fe5d3535475f27f7896bef8

tdf#142196 sw: crossing out images anchored to character

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 BogdanB 2021-05-19 08:28:38 UTC
The dog image is now crossed out. 

Verified in
Version: 7.2.0.0.alpha1+ / LibreOffice Community
Build ID: b238522ca121ca8f863fe4d3394ade088a65ad01
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: en-US (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 5 László Németh 2021-05-20 08:36:20 UTC
@BogdanB: thanks for your feedback!