tdf#142196 sw: crossing out images anchored to character

Follow-up to commit d845b91bcc6eb885c55494d4d4fab4ec09577e1d
(tdf#78864 sw track changes: cross out deleted images).

Change-Id: I3daa772ac80f777e1badc58a424f98b1d655acba
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/115442
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 1610eeef6f2312616fe5d3535475f27f7896bef8)