sw/source/core/inc/flyfrm.hxx
@@ -111,6 +111,7 @@ protected:
                              ///< or RndStdIds::FLY_AT_CHAR
     bool m_bLayout :1;       ///< RndStdIds::FLY_AT_PAGE, RndStdIds::FLY_AT_FLY, at page or at frame
     bool m_bAutoPosition :1; ///< RndStdIds::FLY_AT_CHAR, anchored at character
+    bool m_bDeleted :1;      ///< Anchored to a tracked deletion
 
     friend class SwNoTextFrame; // is allowed to call NotifyBackground
 
@@ -196,6 +197,8 @@ public:
     bool IsFlyFreeFrame() const { return m_bAtCnt || m_bLayout; }
     bool IsFlyLayFrame() const { return m_bLayout; }
     bool IsFlyAtContentFrame() const { return m_bAtCnt; }
+    bool IsDeleted() const { return m_bDeleted; }
+    void SetDeleted(bool bDeleted) { m_bDeleted = bDeleted; }
 
     bool IsNotifyBack() const { return m_bNotifyBack; }
     void SetNotifyBack()      { m_bNotifyBack = true; }
