sw/source/core/layout/fly.cxx
@@ -87,6 +87,7 @@ SwFlyFrame::SwFlyFrame( SwFlyFrameFormat *pFormat, SwFrame* pSib, SwFrame *pAnch
     m_bAtCnt( false ),
     m_bLayout( false ),
     m_bAutoPosition( false ),
+    m_bDeleted (false ),
     m_bValidContentPos( false )
 {
     mnFrameType = SwFrameType::Fly;
